--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div class="d-block p-2 bg-dark text-center text-white">
         <h1>Weather Dashboard</h1>
     </div>
+    <br>
     <main class="container-fluid">
         <section class="row">
             <!-- city search button -->
@@ -27,12 +28,14 @@
                     </div>
                     <input id="city" type="text" class="form-control" placeholder="City Name">
                   </div>
-                  <ul id="citybuttons"></ul>
+                  <ul id="citybuttons" class="list-group"></ul>
             </aside>
+            <br>
             <section class="col-md-8">
                 <div class="row">
                 <div id="currentweather" class="col-md-8"></div>
               </div>   
+              <br>
               <div id="fivedayforecast" class="row"></div>
             </section>
          
